--- a/index.html
+++ b/index.html
@@ -982,7 +982,7 @@
 
                     
 
-                <!-- Student Volunteers -->
+                <!-- Student Volunteers 
                 <div class="mb-16">
                     <div class="flex items-center justify-center mb-12">
                         <div class="w-14 h-14 ted-red-gradient rounded-full flex items-center justify-center mr-4">
@@ -1048,8 +1048,8 @@
                         </div>
                     </div>
                 </div>
-
-                <!-- Faculty Advisors -->
+-->
+                <!-- Faculty Advisors
                 <div class="mb-16">
                     <div class="flex items-center justify-center mb-12">
                         <div class="w-14 h-14 ted-red-gradient rounded-full flex items-center justify-center mr-4">
@@ -1103,7 +1103,7 @@
                         </div>
                     </div>
                 </div>
-
+ -->
                 <!-- Join Our Team -->
                 <div
                     class="dark-glass p-12 rounded-3xl text-center border border-red-500/30 bg-gradient-to-br from-red-900/20 to-transparent hover-glow">
@@ -1210,6 +1210,7 @@
                             Sponsorship Packages
                         </button>
                         <button
+                            onclick="showPage('contact')"
                             class="glass-effect text-white px-10 py-4 rounded-full text-lg font-semibold hover:bg-white/20 transition-all duration-300 border border-gray-600">
                             Contact Us
                         </button>
