--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                     </div>
                     <div
                         class="dark-glass p-8 rounded-2xl text-center card-hover transition-all duration-300 border border-gray-700">
-                        
+                        <div class="text-6xl mb-6">📍</div>
                         <h3 class="text-2xl font-semibold mb-4 text-white">Venue</h3>
                         <p class="text-gray-300 leading-relaxed">Auditorium, JSS International School, JVC, Dubai</p>
                         <p>
@@ -1182,7 +1182,7 @@
                     </p>
                     <div class="flex flex-col sm:flex-row gap-4 justify-center">
                         <a
-                            href="https://docs.google.com/forms/d/e/1FAIpQLSc9lF503r_mjbUb2gusrHQ19TStlQzWirqq-Oh2UaR6QQqSUQ/viewform">
+                            href="#">
                             <button
                                 class="ted-red-gradient text-white px-8 py-4 rounded-full text-lg font-semibold hover-glow transition-all duration-300 transform hover:scale-105">
                                 Apply to Speak
