--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center h-20">
                 <div class="flex items-center">
-                    <!-- TEDx Logo moved to top left corner -->
+                                        <!-- TEDx Logo moved to top left corner -->
                     <div class="flex-shrink-0 flex items-center h-16">
                         <img src="assets\logo.png" alt="TEDxJSS Logo" class="h-14 w-auto object-contain"
                             style="max-height:56px;">
@@ -420,7 +420,7 @@
             
 
             <hr class="my-16 border-gray-700">
-            <!-- TEDx required description on homepage -->
+            <!-- TEDx required description on homepage 
             <section class="max-w-4xl mx-auto my-8 p-6 dark-glass rounded-xl border border-gray-700">
                 <h2 class="text-2xl font-bold mb-4 gradient-text">What is TEDx?</h2>
                 <p class="text-gray-300 mb-2">
@@ -439,6 +439,7 @@
                         target="_blank">Learn more about TEDx</a>
                 </p>
             </section>
+                -->
 
     </div>
 
@@ -1489,6 +1490,7 @@
     </script>
     <script>(function () { function c() { var b = a.contentDocument || a.contentWindow.document; if (b) { var d = b.createElement('script'); d.innerHTML = "window.__CF$cv$params={r:'989339df654eb47c',t:'MTc1OTU2NTY3MC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);"; b.getElementsByTagName('head')[0].appendChild(d) } } if (document.body) { var a = document.createElement('iframe'); a.height = 1; a.width = 1; a.style.position = 'absolute'; a.style.top = 0; a.style.left = 0; a.style.border = 'none'; a.style.visibility = 'hidden'; document.body.appendChild(a); if ('loading' !== document.readyState) c(); else if (window.addEventListener) document.addEventListener('DOMContentLoaded', c); else { var e = document.onreadystatechange || function () { }; document.onreadystatechange = function (b) { e(b); 'loading' !== document.readyState && (document.onreadystatechange = e, c()) } } } })();</script>
 </body>
+
 
 
 </html>
