--- a/index.html
+++ b/index.html
@@ -1188,10 +1188,10 @@
                                 class="ted-red-gradient text-white px-8 py-4 rounded-full text-lg font-semibold hover-glow transition-all duration-300 transform hover:scale-105">
                                 Apply to Speak
                             </button></a>
-                        <button
-                            class="glass-effect text-white px-8 py-4 rounded-full text-lg font-semibold hover:bg-white/20 transition-all duration-300 border border-gray-600">
+                       <a href="https://tedxjss-international-school.github.io/Tedx_Speaker_Guidelines.pdf">
+                           <button class="glass-effect text-white px-8 py-4 rounded-full text-lg font-semibold hover:bg-white/20 transition-all duration-300 border border-gray-600">
                             Speaker Guidelines
-                        </button>
+                        </button></a>
                     </div>
                 </div>
             </div>
@@ -1494,3 +1494,4 @@
 
 
 </html>
+
