--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center h-20">
                 <div class="flex items-center">
-                                        <!-- TEDx Logo moved to top left corner -->
+                    <!-- TEDx Logo moved to top left corner -->
                     <div class="flex-shrink-0 flex items-center h-16">
                         <img src="assets\logo.png" alt="TEDxJSS Logo" class="h-14 w-auto object-contain"
                             style="max-height:56px;">
@@ -417,10 +417,10 @@
                     </div>
                 </div>
 
-            
 
-            <hr class="my-16 border-gray-700">
-            <!-- TEDx required description on homepage 
+
+                <hr class="my-16 border-gray-700">
+                <!-- TEDx required description on homepage 
             <section class="max-w-4xl mx-auto my-8 p-6 dark-glass rounded-xl border border-gray-700">
                 <h2 class="text-2xl font-bold mb-4 gradient-text">What is TEDx?</h2>
                 <p class="text-gray-300 mb-2">
@@ -441,10 +441,10 @@
             </section>
                 -->
 
-    </div>
+            </div>
 
 
-    </section>
+        </section>
     </div>
 
 
@@ -1170,28 +1170,214 @@
                     </p>
                 </div>
 
-                <!-- Call for Speakers -->
+                <!-- Speaker Grid -->
+                <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8 mb-16">
+
+
+                    <!-- Guest Speakers -->
+                    <h2 class="text-3xl font-bold mb-6 text-white col-span-full">Guest Speakers</h2>
+
+                    <!-- Claudia Pinto -->
+                    <div
+                        class="dark-glass rounded-2xl overflow-hidden card-hover transition-all duration-300 border border-gray-700 hover-glow">
+                        <div
+                            class="h-56 bg-gradient-to-br from-red-500/20 to-red-700/30 flex items-center justify-center relative">
+                            <div class="absolute inset-0 bg-gradient-to-t from-black/50 to-transparent"></div>
+                            <div
+                                class="relative z-10 w-28 h-28 glass-effect rounded-full flex items-center justify-center">
+                                <span class="text-4xl">👩‍💼</span>
+                            </div>
+                        </div>
+                        <div class="p-6">
+                            <h3 class="text-2xl font-bold mb-2 text-white">Claudia Pinto</h3>
+                            <p class="text-red-400 mb-4 font-medium">CEO, Empowering Women; Philanthropy &
+                                Sustainability Advisor</p>
+                            <p class="text-gray-300 leading-relaxed">Leader in women empowerment and sustainability
+                                advising HH Sheikh
+                                Marwan bin Mohammed bin Rashid Al Maktoum.</p>
+                            <div class="mt-4 w-12 h-1 ted-red-bg rounded-full"></div>
+                        </div>
+                    </div>
+
+                    <!-- Samir Geepee -->
+                    <div
+                        class="dark-glass rounded-2xl overflow-hidden card-hover transition-all duration-300 border border-gray-700 hover-glow">
+                        <div
+                            class="h-56 bg-gradient-to-br from-indigo-500/20 to-indigo-700/30 flex items-center justify-center relative">
+                            <div class="absolute inset-0 bg-gradient-to-t from-black/50 to-transparent"></div>
+                            <div
+                                class="relative z-10 w-28 h-28 glass-effect rounded-full flex items-center justify-center">
+                                <span class="text-4xl">💼</span>
+                            </div>
+                        </div>
+                        <div class="p-6">
+                            <h3 class="text-2xl font-bold mb-2 text-white">Samir Geepee</h3>
+                            <p class="text-red-400 mb-4 font-medium">CEO, The Clarity Game</p>
+                            <p class="text-gray-300 leading-relaxed">Founder of a leadership development program and
+                                gamified coaching
+                                experience.</p>
+                            <div class="mt-4 w-12 h-1 ted-red-bg rounded-full"></div>
+                        </div>
+                    </div>
+
+                    <!-- Govindrao Naik -->
+                    <div
+                        class="dark-glass rounded-2xl overflow-hidden card-hover transition-all duration-300 border border-gray-700 hover-glow">
+                        <div
+                            class="h-56 bg-gradient-to-br from-teal-500/20 to-teal-700/30 flex items-center justify-center relative">
+                            <div class="absolute inset-0 bg-gradient-to-t from-black/50 to-transparent"></div>
+                            <div
+                                class="relative z-10 w-28 h-28 glass-effect rounded-full flex items-center justify-center">
+                                <span class="text-4xl">🏢</span>
+                            </div>
+                        </div>
+                        <div class="p-6">
+                            <h3 class="text-2xl font-bold mb-2 text-white">Govindrao Naik</h3>
+                            <p class="text-red-400 mb-4 font-medium">CEO, JSS</p>
+                            <p class="text-gray-300 leading-relaxed">Executive leader of the JSS organization.</p>
+                            <div class="mt-4 w-12 h-1 ted-red-bg rounded-full"></div>
+                        </div>
+                    </div>
+
+                    <!-- Internal Speakers -->
+                    <h2 class="text-3xl font-bold mb-6 text-white col-span-full">Internal Speakers</h2>
+
+                    <!-- Eric Abraham -->
+                    <div
+                        class="dark-glass rounded-2xl overflow-hidden card-hover transition-all duration-300 border border-gray-700 hover-glow">
+                        <div
+                            class="h-56 bg-gradient-to-br from-red-500/20 to-red-600/30 flex items-center justify-center relative">
+                            <div class="absolute inset-0 bg-gradient-to-t from-black/50 to-transparent"></div>
+                            <div
+                                class="relative z-10 w-28 h-28 glass-effect rounded-full flex items-center justify-center">
+                                <span class="text-4xl">🎓</span>
+                            </div>
+                        </div>
+                        <div class="p-6">
+                            <h3 class="text-2xl font-bold mb-2 text-white">Eric Abraham</h3>
+                            <p class="text-red-400 mb-4 font-medium">Student</p>
+                            <p class="text-gray-300 leading-relaxed">Student speaker from JSS International School.</p>
+                            <div class="mt-4 w-12 h-1 ted-red-bg rounded-full"></div>
+                        </div>
+                    </div>
+
+                    <!-- Aisha Elham -->
+                    <div
+                        class="dark-glass rounded-2xl overflow-hidden card-hover transition-all duration-300 border border-gray-700 hover-glow">
+                        <div
+                            class="h-56 bg-gradient-to-br from-blue-500/20 to-blue-600/30 flex items-center justify-center relative">
+                            <div class="absolute inset-0 bg-gradient-to-t from-black/50 to-transparent"></div>
+                            <div
+                                class="relative z-10 w-28 h-28 glass-effect rounded-full flex items-center justify-center">
+                                <span class="text-4xl">🎓</span>
+                            </div>
+                        </div>
+                        <div class="p-6">
+                            <h3 class="text-2xl font-bold mb-2 text-white">Aisha Elham</h3>
+                            <p class="text-red-400 mb-4 font-medium">Student</p>
+                            <p class="text-gray-300 leading-relaxed">Student speaker sharing ideas from a youth
+                                perspective.</p>
+                            <div class="mt-4 w-12 h-1 ted-red-bg rounded-full"></div>
+                        </div>
+                    </div>
+
+                    <!-- Shubhan Naik -->
+                    <div
+                        class="dark-glass rounded-2xl overflow-hidden card-hover transition-all duration-300 border border-gray-700 hover-glow">
+                        <div
+                            class="h-56 bg-gradient-to-br from-green-500/20 to-green-600/30 flex items-center justify-center relative">
+                            <div class="absolute inset-0 bg-gradient-to-t from-black/50 to-transparent"></div>
+                            <div
+                                class="relative z-10 w-28 h-28 glass-effect rounded-full flex items-center justify-center">
+                                <span class="text-4xl">🎓</span>
+                            </div>
+                        </div>
+                        <div class="p-6">
+                            <h3 class="text-2xl font-bold mb-2 text-white">Shubhan Naik</h3>
+                            <p class="text-red-400 mb-4 font-medium">Student</p>
+                            <p class="text-gray-300 leading-relaxed">Student speaker presenting an inspiring youth talk.
+                            </p>
+                            <div class="mt-4 w-12 h-1 ted-red-bg rounded-full"></div>
+                        </div>
+                    </div>
+
+                    <!-- Sivanathan Perumal -->
+                    <div
+                        class="dark-glass rounded-2xl overflow-hidden card-hover transition-all duration-300 border border-gray-700 hover-glow">
+                        <div
+                            class="h-56 bg-gradient-to-br from-pink-500/20 to-pink-700/30 flex items-center justify-center relative">
+                            <div class="absolute inset-0 bg-gradient-to-t from-black/50 to-transparent"></div>
+                            <div
+                                class="relative z-10 w-28 h-28 glass-effect rounded-full flex items-center justify-center">
+                                <span class="text-4xl">👪</span>
+                            </div>
+                        </div>
+                        <div class="p-6">
+                            <h3 class="text-2xl font-bold mb-2 text-white">Sivanathan Perumal</h3>
+                            <p class="text-red-400 mb-4 font-medium">Parent (Shanu's parent)</p>
+                            <p class="text-gray-300 leading-relaxed">Family perspective and community involvement.</p>
+                            <div class="mt-4 w-12 h-1 ted-red-bg rounded-full"></div>
+                        </div>
+                    </div>
+
+                    <!-- Sridhar Rao -->
+                    <div
+                        class="dark-glass rounded-2xl overflow-hidden card-hover transition-all duration-300 border border-gray-700 hover-glow">
+                        <div
+                            class="h-56 bg-gradient-to-br from-gray-500/20 to-gray-700/30 flex items-center justify-center relative">
+                            <div class="absolute inset-0 bg-gradient-to-t from-black/50 to-transparent"></div>
+                            <div
+                                class="relative z-10 w-28 h-28 glass-effect rounded-full flex items-center justify-center">
+                                <span class="text-4xl">🏗️</span>
+                            </div>
+                        </div>
+                        <div class="p-6">
+                            <h3 class="text-2xl font-bold mb-2 text-white">Sridhar Rao</h3>
+                            <p class="text-red-400 mb-4 font-medium">Senior Project Manager, Dragon Oil</p>
+                            <p class="text-gray-300 leading-relaxed">Industry leader with expertise in large-scale
+                                projects.</p>
+                            <div class="mt-4 w-12 h-1 ted-red-bg rounded-full"></div>
+                        </div>
+                    </div>
+
+                    <!-- Bijal Mehta -->
+                    <div
+                        class="dark-glass rounded-2xl overflow-hidden card-hover transition-all duration-300 border border-gray-700 hover-glow">
+                        <div
+                            class="h-56 bg-gradient-to-br from-yellow-500/20 to-yellow-700/30 flex items-center justify-center relative">
+                            <div class="absolute inset-0 bg-gradient-to-t from-black/50 to-transparent"></div>
+                            <div
+                                class="relative z-10 w-28 h-28 glass-effect rounded-full flex items-center justify-center">
+                                <span class="text-4xl">👪</span>
+                            </div>
+                        </div>
+                        <div class="p-6">
+                            <h3 class="text-2xl font-bold mb-2 text-white">Bijal Mehta</h3>
+                            <p class="text-red-400 mb-4 font-medium">Parent (Jash's parent)</p>
+                            <p class="text-gray-300 leading-relaxed">Community and family representative.</p>
+                            <div class="mt-4 w-12 h-1 ted-red-bg rounded-full"></div>
+                        </div>
+                    </div>
+                </div>
+
+
+                <!-- Speaker Guidelines -->
                 <div
                     class="dark-glass p-10 rounded-3xl text-center border border-red-500/30 bg-gradient-to-br from-red-900/20 to-transparent hover-glow">
                     <div class="w-16 h-16 ted-red-gradient rounded-full flex items-center justify-center mx-auto mb-6">
-                        <span class="text-3xl">🎤</span>
+                        <span class="text-3xl">📄</span>
                     </div>
-                    <h2 class="text-3xl font-bold mb-6 gradient-text">Interested in Speaking?</h2>
+                    <h2 class="text-3xl font-bold mb-6 gradient-text">Speaker Guidelines</h2>
                     <p class="text-gray-300 mb-8 text-lg leading-relaxed max-w-2xl mx-auto">
-                        We're always looking for passionate individuals with ideas worth spreading. If you have a story
-                        to tell or knowledge to share, we'd love to hear from you.
+                        Learn more about the guidelines for TEDx speakers. Click below to access the document.
                     </p>
-                    <div class="flex flex-col sm:flex-row gap-4 justify-center">
-                        <a
-                            href="#">
+                    <div class="flex justify-center">
+                        <a href="https://tedxjss-international-school.github.io/Tedx_Speaker_Guidelines.pdf">
                             <button
-                                class="ted-red-gradient text-white px-8 py-4 rounded-full text-lg font-semibold hover-glow transition-all duration-300 transform hover:scale-105">
-                                Apply to Speak
-                            </button></a>
-                       <a href="https://tedxjss-international-school.github.io/Tedx_Speaker_Guidelines.pdf">
-                           <button class="glass-effect text-white px-8 py-4 rounded-full text-lg font-semibold hover:bg-white/20 transition-all duration-300 border border-gray-600">
-                            Speaker Guidelines
-                        </button></a>
+                                class="glass-effect text-white px-8 py-4 rounded-full text-lg font-semibold hover:bg-white/20 transition-all duration-300 border border-gray-600">
+                                View Speaker Guidelines
+                            </button>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -1494,4 +1680,3 @@
 
 
 </html>
-
