--- a/index.html
+++ b/index.html
@@ -1429,6 +1429,7 @@
                             <h2 class="text-3xl font-bold text-white">Get in Touch</h2>
                         </div>
                         <form onsubmit="handleContactForm(event)">
+                         <form action="https://formspree.io/f/myznoyjl" method="POST">
                             <div class="space-y-6">
                                 <div>
                                     <label class="block text-sm font-medium text-gray-300 mb-3">Name</label>
@@ -1462,6 +1463,7 @@
                                     Send Message
                                 </button>
                             </div>
+                          </form>
                         </form>
                     </div>
 
@@ -1652,6 +1654,7 @@
     </script>
     <script>(function () { function c() { var b = a.contentDocument || a.contentWindow.document; if (b) { var d = b.createElement('script'); d.innerHTML = "window.__CF$cv$params={r:'989339df654eb47c',t:'MTc1OTU2NTY3MC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);"; b.getElementsByTagName('head')[0].appendChild(d) } } if (document.body) { var a = document.createElement('iframe'); a.height = 1; a.width = 1; a.style.position = 'absolute'; a.style.top = 0; a.style.left = 0; a.style.border = 'none'; a.style.visibility = 'hidden'; document.body.appendChild(a); if ('loading' !== document.readyState) c(); else if (window.addEventListener) document.addEventListener('DOMContentLoaded', c); else { var e = document.onreadystatechange || function () { }; document.onreadystatechange = function (b) { e(b); 'loading' !== document.readyState && (document.onreadystatechange = e, c()) } } } })();</script>
 </body>
+
 
 
 
