--- a/index.html
+++ b/index.html
@@ -1428,23 +1428,22 @@
                             </div>
                             <h2 class="text-3xl font-bold text-white">Get in Touch</h2>
                         </div>
-                        <form onsubmit="handleContactForm(event)">
-                         <form action="https://formspree.io/f/myznoyjl" method="POST">
+                            <form action="https://formspree.io/f/mayvlrjd" method="POST">x
                             <div class="space-y-6">
                                 <div>
                                     <label class="block text-sm font-medium text-gray-300 mb-3">Name</label>
-                                    <input type="text" required
-                                        class="w-full px-4 py-3 bg-black-800 border border-gray-600 rounded-xl text-white focus:outline-none focus:ring-2 focus:ring-red-500 focus:border-transparent transition-all">
+                                    <input type="text" name="name" required
+                                        class="w-full px-4 py-3 bg-gray-800 border border-gray-600 rounded-xl text-white focus:outline-none focus:ring-2 focus:ring-red-500 focus:border-transparent transition-all">
                                 </div>
                                 <div>
                                     <label class="block text-sm font-medium text-gray-300 mb-3">Email</label>
-                                    <input type="email" required
-                                        class="w-full px-4 py-3 bg-black-800 border border-gray-600 rounded-xl text-white focus:outline-none focus:ring-2 focus:ring-red-500 focus:border-transparent transition-all">
+                                    <input type="email" name="email" required
+                                        class="w-full px-4 py-3 bg-gray-800 border border-gray-600 rounded-xl text-white focus:outline-none focus:ring-2 focus:ring-red-500 focus:border-transparent transition-all">
                                 </div>
                                 <div>
                                     <label class="block text-sm font-medium text-gray-300 mb-3">Subject</label>
-                                    <select
-                                        class="w-full px-4 py-3 bg-black-800 border border-gray-600 rounded-xl text-white focus:outline-none focus:ring-2 focus:ring-red-500 focus:border-transparent transition-all">
+                                    <select name="subject"
+                                        class="w-full px-4 py-3 bg-gray-800 border border-gray-600 rounded-xl text-white focus:outline-none focus:ring-2 focus:ring-red-500 focus:border-transparent transition-all">
                                         <option>General Inquiry</option>
                                         <option>Speaking Opportunity</option>
                                         <option>Sponsorship</option>
@@ -1455,15 +1454,15 @@
                                 </div>
                                 <div>
                                     <label class="block text-sm font-medium text-gray-300 mb-3">Message</label>
-                                    <textarea rows="5" required
-                                        class="w-full px-4 py-3 bg-black-800 border border-gray-600 rounded-xl text-white focus:outline-none focus:ring-2 focus:ring-red-500 focus:border-transparent transition-all resize-none"></textarea>
+                                    <textarea rows="5" name="message" required
+                                        class="w-full px-4 py-3 bg-gray-800 border border-gray-600 rounded-xl text-white focus:outline-none focus:ring-2 focus:ring-red-500 focus:border-transparent transition-all resize-none"></textarea>
                                 </div>
                                 <button type="submit"
                                     class="w-full ted-red-gradient text-white py-4 rounded-xl text-lg font-semibold hover-glow transition-all duration-300 transform hover:scale-105">
                                     Send Message
                                 </button>
                             </div>
-                          </form>
+                          
                         </form>
                     </div>
 
