--- a/index.html
+++ b/index.html
@@ -1428,7 +1428,7 @@
                             </div>
                             <h2 class="text-3xl font-bold text-white">Get in Touch</h2>
                         </div>
-                            <form action="https://formspree.io/f/mayvlrjd" method="POST">x
+                            <form action="https://formspree.io/f/myznoyjl" method="POST">x
                             <div class="space-y-6">
                                 <div>
                                     <label class="block text-sm font-medium text-gray-300 mb-3">Name</label>
